Fix letter spacing

--- a/src/component/about/about.scss
+++ b/src/component/about/about.scss
@@ -25,8 +25,8 @@
     color: $main-white;
     font-size: 15px;
     line-height: 25px;
-    letter-spacing: -1.5px;
-    margin-bottom: 32px;
+    //letter-spacing: -1.5px;
+    //margin-bottom: 32px;
 
     @include onTablet {
       margin-bottom: 0;
