--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -56,7 +56,7 @@
       font-size: 20px;
       line-height: 100%;
       color: $main-white;
-      letter-spacing: -1.5px;
+      //letter-spacing: -1.5px;
 
       @include onTablet {
         font-size: 40px;
@@ -73,7 +73,7 @@
       font-size: 10px;
       line-height: 100%;
       color: $main-white;
-      letter-spacing: -1.5px;
+      //letter-spacing: -1.5px;
 
       @include onTablet {
         font-size: 15px;
