--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -61,7 +61,7 @@
     line-height: 32px;
 
     text-align: center;
-    letter-spacing: -1.5px;
+    //letter-spacing: -1.5px;
     color: $main-black;
 
     @include onTablet {
@@ -83,7 +83,7 @@
     line-height: 20px;
 
     text-align: center;
-    letter-spacing: -1.5px;
+    //letter-spacing: -1.5px;
 
     @include onTablet {
       font-size: 18px;
